# blackkeyx-agent

./: .gitignore  agent.py  dispatch-rule.json  livekit.toml  pyproject.toml  requirements.txt
tests/: conftest.py  helpers.py  test_context.py  test_greeting.py  test_guardrails.py  test_qualification.py  test_tools.py  test_voicemail_detector.py  test_voicemail_handling.py
