[project]
name = "blackkeyx-agent"
version = "1.0.0"
description = "BlackKeyX Voice AI Agent for investor qualification"
requires-python = ">=3.11"

dependencies = [
    "livekit-agents[openai,silero,turn-detector,ultravox]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit~=1.0",
    "python-dotenv",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["."]
